Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15738 closed bug (fixed)

Device list width is not font sensitive

Reported by: pulkomandy Owned by: PreetpalKaur
Priority: normal Milestone: R1/beta2
Component: Preferences/Input Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Run Input preferences with different system font sizes. The device list does not scale properly, so with large fonts it is too small, and for small fonts, it is too large.

Change History (2)

comment:1 by pulkomandy, 5 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev53950.

comment:2 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.