Bug_fix_#15738(Make Device list width is font sensitive)

Change-Id: I125c47f015c939acbd70c9509310ec3cdef7d2c5